tooltip icon CSS class conflict with bootstrap styles fixed, help icon in XML tree is visible again, fixes #49

--- a/src/FIT/NetopeerBundle/Resources/public/sass/screen.scss
+++ b/src/FIT/NetopeerBundle/Resources/public/sass/screen.scss
@@ -301,7 +301,7 @@ body section { float: left; width: 49.93%; min-height: 100%; padding: $sContentP
 
 	&.generated {
 		input.value.text, textarea.value { margin-top: 0px; margin-bottom: 0px; }
-		.tooltip { margin-top: 3px; }
+		.tooltip-cover { margin-top: 3px; }
 	}
 
 	.edit-bar { min-height: 22px; margin: -3px 0px -5px 2%; float: right; text-align: right;
@@ -335,7 +335,7 @@ body section { float: left; width: 49.93%; min-height: 100%; padding: $sContentP
 	+ * > .leaf-line:first-child { margin-top: 0px; }
 }
 .mandatory { color: #888; }
-.tooltip { float: right; margin: 0px 0px 0px 4px; }
+.tooltip-cover { float: right; margin: 0px 0px 0px 4px; }
 .label-cover {
 	&.has-tooltip {  }
 }
@@ -493,7 +493,7 @@ table { width: 100%; margin: 15px 0px;
 }
 
 /* tooltip */
-.tooltip { cursor: help;
+.tooltip-cover { cursor: help;
 	.icon-help { @include background(rgba(255,255,255,0.3)); border: 1px solid #ddd; color: #888; text-shadow: 1px 1px 2px #ccc; width: 16px; height: 16px; line-height: 16px; text-align: center; @include inline-block; @include border-radius(3px); font-size: 13px; margin: -5px 0px -2px 0px;
 		&:hover { @include background(rgba(255,255,255,0.7)); border: 1px solid #bbb; }
 	}
